--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ header nav {
     display: flex;
 }
 
-/##############################  ELIZABETH ######################################################/
+/*##############################  ELIZABETH ######################################################*/
 
 header nav li {
     margin: 0px 20px;
@@ -170,10 +170,10 @@ header h2 img {
 }
 
 
-/##############################  ELIZABETH ######################################################/
+/*##############################  ELIZABETH ######################################################*/
 
 
-/##############################  HERNAN ######################################################/
+/*##############################  HERNAN ######################################################*/
 
 .hero {
     position: relative;
@@ -286,7 +286,7 @@ header h2 img {
 
  }
 
- /##############################  HERNAN ######################################################/
+ /*##############################  HERNAN ######################################################*/
 
  
 /*##############################  OSCAR   ######################################################*/
