--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+
+.logo{
+    width:40px;
+}
+
+
 * {
     margin: 0;
     padding: 0;
@@ -10,6 +16,7 @@ html {
 }
 ul, nav {
     list-style: none;
+    
 }
 a {
 	text-decoration: none;
@@ -20,29 +27,28 @@ a {
 a:hover {
     opacity: 3;
     cursor: pointer;
-  
-   
 }
 a.btn {
     color: #fff;
     border-radius: 4px;
     text-transform: uppercase;
-  
+    background-color: #2196f3;
     font-weight: 800;
     text-align: center;
 }
 section {
     display: flex;
     flex-direction: column;
-  
     padding: 120px 0px;
  
 }
+
 @media (max-width: 1000px){
 	section{
 		padding: 20px 0px;
 	}
 }
+
 
 
 ul.grid {
@@ -57,51 +63,95 @@ header {
     position: relative;
     top: 0;
     left: 0;
-   
+
+    z-index: 2;
     width: 100%;
-    height:10%;
+    height:45px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: rgb(253, 252, 250);
-    padding: 0px 100px 0;
-    background-color: #57BFFF;
-   margin-bottom: 90px;
+    color: rgb(0, 0, 0);
+    padding: 0px 10px 0 ;
+    background-color: #57bfff;
 
 }
 header h2{
     font-family: 'Quicksand', sans-serif;
-    font-size: 30px;
-    font-weight: bold;
+    font-size: 20px;
     padding-top: 20px;
+    font-weight: bold
+
 }
 
 header nav {
     display: flex;
 }
 
+
 header nav li {
-    margin: 0px 25px;
+    margin: 0px 20px;
+
 }
 header nav li:first-child {
-    margin-left:0; 
+    margin-left:0;
 }
-header h2 img {
-    width: 50px;
-    max-width: 50px;
-    margin-left: -75px;
-    margin-right: 10px;
-    padding-right: 10px;
-    padding-top: 15px;
-    padding-bottom: 0px;
-    vertical-align: middle;
-    margin-bottom: 5px;
-    padding-top: 0px;
-}
-
-
 header nav li:last-child {
     margin-right: 0px;
+}
+
+header nav li a
+{
+    font-family: sans-serif;
+
+    font-weight:600;
+    font-size: 14px;
+
+}
+
+header nav li a:hover
+{   color:#171717;
+    font-size: 14px;
+    font-weight: 600;
+
+
+}
+header h2 img {
+
+    width: 50px;
+    max-width: 50px;
+    vertical-align: middle;
+
+    margin-left: 0px;
+    margin-right: 10px;
+    margin-bottom: 0px;
+
+
+    padding-top: 0px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+
+}
+
+
+
+
+@media(max-width: 750px){
+    header nav li a {
+        font-size: 10px;
+    }
+    header nav li a {
+        margin-left: -15px;
+        margin-right: -15px;
+        padding-left: -15px;
+        padding-right: -15px;
+
+    }
+    header nav li:first-child {
+        margin-left:10px;
+    }
+    header nav li:last-child {
+        margin-right: 10px;
+    }
 }
 
 @media(max-width: 1000px){
@@ -119,192 +169,88 @@ header nav li:last-child {
     }
 }
 
-.icon-bars{
-    background-color: #57BFFF;
-    color:black;
-    cursor:pointer;
-margin-right: -58px;
-    font-size:35px;
-    text-align:center;
-    display:none;
-    
+
+
+.hero {
+    position: relative;
+    justify-content: center;
+    min-height: 100vh;
+    color: #fff;
+    text-align: center;
+    align-items: center;
+    margin:0;
 }
 
-
-.sidebar-contact{
-    position:fixed;
-    top:80%;
-    left:-350px;
-    transform:translateY(-50%);
-    width:350px;
-    height:auto;
-    padding: 40px;
-    background-color: #fff;
-    box-shadow: 0 20px 50px rgba(0,0,0,.5);
-    transition: 0.5s;
-  
-}
-
-.sidebar-contact.active
-{
-left:0;
-}
-
-.sidebar-contact input,
-.sidebar-contact textarea
-{
-   width:100%; 
-   height:36px;
-   padding:5px;
-   margin-bottom:10px;
-   box-sizing:border-box;
-   border:1px solid rgba(0,0,0,.5);
-   outline:none;
-}
-
-.sidebar-contact input[type="submit"]{
-    background-color: #00bcd4;
-    color:#fff;
-    cursor:pointer;
-    border:none;
-    font-style:18px;
-}
-
-.sidebar-contact h2{
-    margin:0 0 20px;
-    padding:0;
-}
-
-.toogle{
-    position:absolute;
-    top:0;
-    right:-48px;
-    width:48px;
-    height:48px;
-    text-align:center;
-    line-height: 48px;
-    cursor:pointer;
-    background:red;
-}
- .toogle:before{
-    content: "\f003";
-    font-family: 'icomoon';
-    color:white;
-    font-size:18px;
-    
-}
-
-.toogle:active{
-    content: "\f013";
-    font-family: 'icomoon';
-    color:white;
-    font-size:18px;
-    
-}
-
-.titulo{
-    font: bold 60px 'Open Sans', sans-serif;
-   
-    padding: 5px;
-    margin-bottom: 40px;
-    padding-top: 40px;
-}
-
-.titulo .mascota{
-    font-weight:bold;
-    color: #c99806;
-    font-style: normal;
-}
-
-
- .container-slider{
-   max-width: 900px;
-   padding-top: 100px;
-   width: 90%;
-  margin:Auto;
-  overflow:hidden;
-  position:relative;
- 
-
- 
-}
-.slider{
-    display:flex;
-    width: 300%;
-    height:400px;
-
-
-    margin-left:-0%;
-  
-}
- .slider_section{
- 
-   
-    width: 100%;
-}
-.slider__img{
-    
+.hero .background-image{
+    position: absolute;
+    top: 0;
+    left: 0;
     width:100%;
     height: 100%;
-    display:block;
-    object-fit: cover;
+    background-size: cover;
+    background-color: #2196f3;
+    z-index: 0;
+	justify-content: center;
+    align-items: center;
 }
-
-
-.slider__btn{
-position: absolute;
-width:40px;
-height:40px;
-background:#000000;
-top:50%; 
-color:#fff;
-transform:translateY(-50%);
-font-size:30px;
-font-weight:bold;
- font-family:monospace;
- text-align:center;
-border-radius: 50%;
-cursor: pointer;
-    
+.hero .background-image:after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #414a4f;
+    opacity: 0.20;
+	
 }
-
- .container-slider .slider .slider__btn:hover{
-    background:#fff;
-    
-    }
- .slider__btn--left{
-    left:10px;
- 
-    }
- .slider__btn--right{
-    right:10px;
-    
- }
-
- .searchbtn{
-    margin-top: 50px;
-    border:2px solid rgb(240, 139, 8);
-    color:black;
-    background-color: transparent;
-    width:290px;
-    height:40px;
+.hero h1 {
+    font: bold 60px 'Open Sans', sans-serif;
+    margin: 5px;
+    padding: 5px;
+    z-index: 2;
+}
+.hero h2{
+    font: bold 60px 'Open Sans', sans-serif;
     font-weight: bold;
+    font-size: 20px;
+    background-color: rgb(240, 139, 8);
     border-radius: 12px;
-    font: bold 25px 'Open Sans', sans-serif;
-    text-transform: uppercase;
-    transition: all 500ms ease;
+    padding: 15px 40px;
+    margin-top: 20px;
+    z-index: 2;
+}
+.hero img {
+    z-index: 4;
+    width: 550px;
+}
+@media (max-width: 800px){
+    .hero .background-image {
+        width: 450px;
+		height: 435px;
+		background-size: 900px, 650px;
+    }
+	.hero .background-image:after {
+        width: 450px;
+		height: 435px;
+    }
+    .hero h1 {
+        font-size: 15px;
+		padding-top: -50px;
+		margin-top: -50px;
+    }
+    .hero h2{
+        padding-bottom: 20px;
+		margin-bottom: 0px;
+    }
+	.hero img {
+		width: 250px;
+	}
+}
+@media (max-width: 550px){
     
-
- }
- 
-.searchbtn:hover{
- background-color:rgb(240, 139, 8);
- box-shadow:0 0 10px rgb(240, 139, 8), 0 0 20px rgb(240, 139, 8)
 }
 
-
-
- 
 .video{
     background-color: #57BFFF;
     justify-content: center;
@@ -313,7 +259,6 @@ cursor: pointer;
     padding-bottom: 0;
     padding-top: 50px;
     padding-bottom: 35px;
-    margin-top: 90px;
 }
 
 .video .background-image{
@@ -337,120 +282,117 @@ cursor: pointer;
 
  }
 
- .video h1{
+ 
+.video h4{
     font: bold 40px 'Open Sans', sans-serif;
-    padding-bottom: 120px;
-    margin-bottom: -120px;
+	text-align: center;
     color:rgb(253, 252, 250);
 }
 .video h2 img{
     max-width: 290px;
     padding-right: 5px;
-    padding-top: 10px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     vertical-align: middle;
     height: 290px;
     
 }
-
-
-
-
-
-.graf{
-
-    padding: 50px 230px;
-    font-size: 20px;
-  
-
+@media (max-width: 550px){
+    .video {
+        min-height: 100%;
+    }
+    .video h2 img{
+        margin-bottom: 10px;
+		padding-bottom: 10px;
+		max-width: 170px;
+		max-height: 170px;
+    }
+	.video h4{
+        font-size: 1px;
+    }
+	.video video{
+		width: 350px;
+		height: 200px;
+	}
 }
-.graf h1{
-    font: bold 35px 'Open Sans', sans-serif;
-    padding-top:45px;
-    padding-bottom: 45px;
-    justify-content: center;
-    align-items: center;
-    color:#57BFFF;
-}
+@media(max-width: 750px){
+    .video h4 {
+        font-size: 20px;
+    }
+}	
 
 
 
-
-.porqueadopt{
+.whyadopt{
     background-color: rgb(240, 139, 8);
     justify-content: center;
     display: flex;
     align-items: center;
-    height:800px;
 }
-.porqueadopt h3{
+.whyadopt h4{
     font: bold 40px 'Open Sans', sans-serif;
-    margin-bottom: 15px;
+    margin-bottom: 50px;
     color:rgb(253, 252, 250);
 }
-.porqueadopt a{
+.whyadopt a{
     font: bold 40px 'Open Sans', sans-serif;
 }
-.porqueadopt .grid li{
+.whyadopt .grid li{
     padding: 0 30px;
-    flex-basis: 33%;
+    flex-basis: 33.3%;
     text-align: center;
 }
-.porqueadopt .grid li p{
+.whyadopt .grid li p{
    color:#fff;
    font: bold 25px 'Open Sans', sans-serif;
 }
-
-
-
-.btn1{
-    margin-top: 50px;
-    border:3px solid #57BFFF;
-    color:black;
-    background-color: #FFF;
-    width:150px;
-    height:40px;
-    font-weight: bold;
-    border-radius: 12px;
-    font: bold 25px 'Open Sans', sans-serif;
-    transition: all 500ms ease;
-    
-    
-
- }
- 
-.btn1:hover{
- background-color:#57BFFF;
- box-shadow:0 0 10px #57BFFF, 0 0 20px #57BFFF
+@media(max-width: 750px){
+	.whyadopt{
+		display: column;
+	}
+	.whyadopt .grid li{
+		flex-basis: 70%;
+	}
+	.whyadopt .grid li p{
+		font-size: 15px;
+	}
+	.whyadopt .grid li i img{
+		margin-top: 20px;
+	}
+    .whyadopt h4 {
+        font-size: 20px;
+		margin-top: 20px;
+    }
 }
 
 
-
-.quienes-somos {
+.whoweare {
     /*position: relative;*/
     justify-content: center;
   
     color: #fff;
     text-align: center;
-    background-color: rgb(240, 139, 8);
-    margin:auto;
+    background-color: #34d8f5;
+    margin:0;
     padding:0;
     align-items: center;
-    height:700px;
 }
 
-.quienes-somos .background-image{
+
+
+.whoweare .background-image{
    /* position: absolute;*/
     position: relative;
     top: 0;
     left: 0;
     width:100%;
-    height: 100%;
+    height: 560px;
     background-size:cover;
     background-color: #414a4f;
     margin:0;
 
 }
-.quienes-somos .background-image:after{
+.whoweare .background-image:after{
     content: '';
     top: 0;
     left: 0;
@@ -458,44 +400,52 @@ cursor: pointer;
     height: 560px;
     background-color: #414a4f;
     opacity: 0.20;
-    background-size:cover;
 }
-.quienes-somos h4 {
+.whoweare h4 {
     font: bold 41px 'Open Sans', sans-serif;
     margin: 15px,15px;
     /*Esto para que se meustre el texto*/
     position: absolute;
 }
-.quienes-somos p{
+.whoweare p{
     margin: 15px,15px;
     font: bold 25px 'Open Sans', sans-serif;
    
   
 }
+@media(max-width: 750px){
+    .whoweare p{
+        font-size: 15px;
+        margin: 40px;
+    }
+    .whoweare h4 {
+        font-size: 20px;
+        margin-top: 20px;
+    }
+    .whoweare .background-image{
+    position: relative;
+    width:100%;
+    height: 360px;
+    }
+}
 
 
-
-
-
-.mision-vision{
-
-    
+.mission-vision{
     color: #000000;
 
     background-color: #57BFFF;
-    margin:auto;
+    margin:0;
     padding:0;
-    background-size: cover;
    
 }
- .mision-vision .capa{
+ .mission-vision .capa{
      display:flex;
      text-align: center;
     align-items: center;
     vertical-align: middle;
  }
 
-.mision-vision .capa h5 {
+.mission-vision .capa h5 {
     font: bold 25px 'Open Sans', sans-serif;
     margin-bottom: 25px;
     color:rgb(253, 252, 250);
@@ -507,7 +457,7 @@ cursor: pointer;
    vertical-align: middle;
    padding-left: 90px;
 }
-.mision-vision p{
+.mission-vision p{
     color:rgb(253, 252, 250);
     font: bold 25px 'Open Sans', sans-serif;
 
@@ -518,24 +468,39 @@ cursor: pointer;
    padding-right: 90px;
    
 }
-
-
-.mision-vision img{
-    
-  
+.mission-vision img{
     width:70%;
     height:890px;
-    background-size:cover ;
     background-size:cover;
     margin:0;
     float: left; 
     padding: 0;
- 
+}
+@media(max-width: 750px){
+    .mission-vision p{
+        font-size: 15px;
+        margin: 40px;
+        margin-left: -40px;
+        padding-left: 0px;
+        padding-right: 9px;
+        float: middle;
+    }
+    .mission-vision .capa{
+        flex-direction: column-reverse;
+        text-align: center;
+        align-items: center;
+        vertical-align: middle;
+    }
+    .mission-vision img{
+        width: 450px;
+        height:890px;
+        float: middle;
+        display: none;
+    }
 }
 
 
-.cobertura{
- 
+.coverage{
     background-color: hsl(325, 86%, 46%);
     
     /*position: relative;*/
@@ -548,12 +513,12 @@ cursor: pointer;
     padding:0;
     align-items: center;
 }
-.cobertura .background-image{
+.coverage .background-image{
     
     top: 0;
     left: 0;
     width:100%;
-    height: 800px;
+    height: 560px;
     background-size:cover;
     background-color: #414a4f;
     margin:0;
@@ -561,8 +526,16 @@ cursor: pointer;
     flex-wrap: wrap;
    
 }
-
-.cobertura h6 {
+.coverage .background-image:after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 560px;  
+   
+}
+.coverage h6 {
     font: bold 41px 'Open Sans', sans-serif;
 
     /*Esto para que se meustre el texto*/
@@ -571,23 +544,34 @@ cursor: pointer;
     padding-right: 600px;
 
 }
-.cobertura p{
+.coverage p{
     
     font: 21px 'Open Sans', sans-serif;
     left:35px;
   
 }
-.cobertura p2{
+.coverage p2{
     font:bold 27px 'Open Sans', sans-serif;
     left:45px;
     padding-right: 420px;
 
 }
-.cobertura p3{
+.coverage p3{
     font: 21px 'Open Sans', sans-serif;
     padding-right: 420px;
     left:45px;
     display: flex;
+}
+@media(max-width: 750px){
+    .coverage h6 {
+        font-size: 20px;
+        margin-top: 20px;
+        padding-right: 90px;
+    }
+    .coverage .background-image{
+        width: 445px;
+        height: 360px;
+    }
 }
 
 
@@ -620,31 +604,46 @@ cursor: pointer;
 .pricing .text-uppercase {
     letter-spacing: 0.2em;
 }
-
+@media(max-width: 750px){
+    .pricing .col-lg-4 {
+        width: 370px;
+        margin-left: 40px;
+    }
+    .pricing{
+        justify-content: center;
+    }
+    .pricing p{
+        font-size: 20px;
+    }
+}
 
 
 .footer{
     display: flex;
-	flex-direction: column;
-	align-items: center;
-	text-align: center;
-	color: #fff;
-	background-color: rgb(240, 139, 8);
-	padding: 60px 0;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    color: #fff;
+    background-color: rgb(240, 139, 8);
+    padding: 15px 0;
 }
 footer ul{
-	display: flex;
-	margin-bottom: 25px;
-	font-size: 32px;
+    display: flex;
+    font-size: 32px;
 }
 
 footer ul li{
-	margin: 0 8px;	
+    margin: 0 8px;
+    margin-bottom: 0px;
 }
 
 footer ul li:first-child{
-	margin-left: 0;	
+    margin-left: 0; 
 }
 footer ul li:last-child{
-	margin-right: 0;	
+    margin-right: 0;    
 }
+footer p {
+    margin-bottom: 0px;
+}
+
