--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,3 @@
-
-.logo{
-    width:40px;
-}
-
-
 * {
     margin: 0;
     padding: 0;
@@ -16,7 +10,6 @@ html {
 }
 ul, nav {
     list-style: none;
-    
 }
 a {
 	text-decoration: none;
@@ -27,28 +20,29 @@ a {
 a:hover {
     opacity: 3;
     cursor: pointer;
+  
+   
 }
 a.btn {
     color: #fff;
     border-radius: 4px;
     text-transform: uppercase;
-    background-color: #2196f3;
+  
     font-weight: 800;
     text-align: center;
 }
 section {
     display: flex;
     flex-direction: column;
+  
     padding: 120px 0px;
  
 }
-
 @media (max-width: 1000px){
 	section{
 		padding: 20px 0px;
 	}
 }
-
 
 
 ul.grid {
@@ -63,95 +57,51 @@ header {
     position: relative;
     top: 0;
     left: 0;
-
-    z-index: 2;
+   
     width: 100%;
-    height:45px;
+    height:10%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: rgb(0, 0, 0);
-    padding: 0px 10px 0 ;
-    background-color: #57bfff;
+    color: rgb(253, 252, 250);
+    padding: 0px 100px 0;
+    background-color: #57BFFF;
+   margin-bottom: 90px;
 
 }
 header h2{
     font-family: 'Quicksand', sans-serif;
-    font-size: 20px;
+    font-size: 30px;
+    font-weight: bold;
     padding-top: 20px;
-    font-weight: bold
-
 }
 
 header nav {
     display: flex;
 }
 
-
 header nav li {
-    margin: 0px 20px;
-
+    margin: 0px 25px;
 }
 header nav li:first-child {
-    margin-left:0;
-}
-header nav li:last-child {
-    margin-right: 0px;
-}
-
-header nav li a
-{
-    font-family: sans-serif;
-
-    font-weight:600;
-    font-size: 14px;
-
-}
-
-header nav li a:hover
-{   color:#171717;
-    font-size: 14px;
-    font-weight: 600;
-
-
+    margin-left:0; 
 }
 header h2 img {
-
     width: 50px;
     max-width: 50px;
-    vertical-align: middle;
-
-    margin-left: 0px;
+    margin-left: -75px;
     margin-right: 10px;
-    margin-bottom: 0px;
-
-
-    padding-top: 0px;
     padding-right: 10px;
-    padding-bottom: 10px;
-
+    padding-top: 15px;
+    padding-bottom: 0px;
+    vertical-align: middle;
+    margin-bottom: 5px;
+    padding-top: 0px;
 }
 
 
-
-
-@media(max-width: 750px){
-    header nav li a {
-        font-size: 10px;
-    }
-    header nav li a {
-        margin-left: -15px;
-        margin-right: -15px;
-        padding-left: -15px;
-        padding-right: -15px;
-
-    }
-    header nav li:first-child {
-        margin-left:10px;
-    }
-    header nav li:last-child {
-        margin-right: 10px;
-    }
+header nav li:last-child {
+    margin-right: 0px;
 }
 
 @media(max-width: 1000px){
@@ -169,88 +119,192 @@ header h2 img {
     }
 }
 
-
-
-.hero {
-    position: relative;
-    justify-content: center;
-    min-height: 100vh;
-    color: #fff;
-    text-align: center;
-    align-items: center;
-    margin:0;
-}
-
-.hero .background-image{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width:100%;
-    height: 100%;
-    background-size: cover;
-    background-color: #2196f3;
-    z-index: 0;
-	justify-content: center;
-    align-items: center;
-}
-.hero .background-image:after{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #414a4f;
-    opacity: 0.20;
-	
-}
-.hero h1 {
-    font: bold 60px 'Open Sans', sans-serif;
-    margin: 5px;
-    padding: 5px;
-    z-index: 2;
-}
-.hero h2{
-    font: bold 60px 'Open Sans', sans-serif;
-    font-weight: bold;
-    font-size: 20px;
-    background-color: rgb(240, 139, 8);
-    border-radius: 12px;
-    padding: 15px 40px;
-    margin-top: 20px;
-    z-index: 2;
-}
-.hero img {
-    z-index: 4;
-    width: 550px;
-}
-@media (max-width: 800px){
-    .hero .background-image {
-        width: 450px;
-		height: 435px;
-		background-size: 900px, 650px;
-    }
-	.hero .background-image:after {
-        width: 450px;
-		height: 435px;
-    }
-    .hero h1 {
-        font-size: 15px;
-		padding-top: -50px;
-		margin-top: -50px;
-    }
-    .hero h2{
-        padding-bottom: 20px;
-		margin-bottom: 0px;
-    }
-	.hero img {
-		width: 250px;
-	}
-}
-@media (max-width: 550px){
+.icon-bars{
+    background-color: #57BFFF;
+    color:black;
+    cursor:pointer;
+margin-right: -58px;
+    font-size:35px;
+    text-align:center;
+    display:none;
     
 }
 
+
+.sidebar-contact{
+    position:fixed;
+    top:80%;
+    left:-350px;
+    transform:translateY(-50%);
+    width:350px;
+    height:auto;
+    padding: 40px;
+    background-color: #fff;
+    box-shadow: 0 20px 50px rgba(0,0,0,.5);
+    transition: 0.5s;
+  
+}
+
+.sidebar-contact.active
+{
+left:0;
+}
+
+.sidebar-contact input,
+.sidebar-contact textarea
+{
+   width:100%; 
+   height:36px;
+   padding:5px;
+   margin-bottom:10px;
+   box-sizing:border-box;
+   border:1px solid rgba(0,0,0,.5);
+   outline:none;
+}
+
+.sidebar-contact input[type="submit"]{
+    background-color: #00bcd4;
+    color:#fff;
+    cursor:pointer;
+    border:none;
+    font-style:18px;
+}
+
+.sidebar-contact h2{
+    margin:0 0 20px;
+    padding:0;
+}
+
+.toogle{
+    position:absolute;
+    top:0;
+    right:-48px;
+    width:48px;
+    height:48px;
+    text-align:center;
+    line-height: 48px;
+    cursor:pointer;
+    background:red;
+}
+ .toogle:before{
+    content: "\f003";
+    font-family: 'icomoon';
+    color:white;
+    font-size:18px;
+    
+}
+
+.toogle:active{
+    content: "\f013";
+    font-family: 'icomoon';
+    color:white;
+    font-size:18px;
+    
+}
+
+.titulo{
+    font: bold 60px 'Open Sans', sans-serif;
+   
+    padding: 5px;
+    margin-bottom: 40px;
+    padding-top: 40px;
+}
+
+.titulo .mascota{
+    font-weight:bold;
+    color: #c99806;
+    font-style: normal;
+}
+
+
+ .container-slider{
+   max-width: 900px;
+   padding-top: 100px;
+   width: 90%;
+  margin:Auto;
+  overflow:hidden;
+  position:relative;
+ 
+
+ 
+}
+.slider{
+    display:flex;
+    width: 300%;
+    height:400px;
+
+
+    margin-left:-0%;
+  
+}
+ .slider_section{
+ 
+   
+    width: 100%;
+}
+.slider__img{
+    
+    width:100%;
+    height: 100%;
+    display:block;
+    object-fit: cover;
+}
+
+
+.slider__btn{
+position: absolute;
+width:40px;
+height:40px;
+background:#000000;
+top:50%; 
+color:#fff;
+transform:translateY(-50%);
+font-size:30px;
+font-weight:bold;
+ font-family:monospace;
+ text-align:center;
+border-radius: 50%;
+cursor: pointer;
+    
+}
+
+ .container-slider .slider .slider__btn:hover{
+    background:#fff;
+    
+    }
+ .slider__btn--left{
+    left:10px;
+ 
+    }
+ .slider__btn--right{
+    right:10px;
+    
+ }
+
+ .searchbtn{
+    margin-top: 50px;
+    border:2px solid rgb(240, 139, 8);
+    color:black;
+    background-color: transparent;
+    width:290px;
+    height:40px;
+    font-weight: bold;
+    border-radius: 12px;
+    font: bold 25px 'Open Sans', sans-serif;
+    text-transform: uppercase;
+    transition: all 500ms ease;
+    
+
+ }
+ 
+.searchbtn:hover{
+ background-color:rgb(240, 139, 8);
+ box-shadow:0 0 10px rgb(240, 139, 8), 0 0 20px rgb(240, 139, 8)
+}
+
+
+
+ 
 .video{
     background-color: #57BFFF;
     justify-content: center;
@@ -259,6 +313,7 @@ header h2 img {
     padding-bottom: 0;
     padding-top: 50px;
     padding-bottom: 35px;
+    margin-top: 90px;
 }
 
 .video .background-image{
@@ -282,117 +337,120 @@ header h2 img {
 
  }
 
- 
-.video h4{
+ .video h1{
     font: bold 40px 'Open Sans', sans-serif;
-	text-align: center;
+    padding-bottom: 120px;
+    margin-bottom: -120px;
     color:rgb(253, 252, 250);
 }
 .video h2 img{
     max-width: 290px;
     padding-right: 5px;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 10px;
     vertical-align: middle;
     height: 290px;
     
 }
-@media (max-width: 550px){
-    .video {
-        min-height: 100%;
-    }
-    .video h2 img{
-        margin-bottom: 10px;
-		padding-bottom: 10px;
-		max-width: 170px;
-		max-height: 170px;
-    }
-	.video h4{
-        font-size: 1px;
-    }
-	.video video{
-		width: 350px;
-		height: 200px;
-	}
+
+
+
+
+
+.graf{
+
+    padding: 50px 230px;
+    font-size: 20px;
+  
+
 }
-@media(max-width: 750px){
-    .video h4 {
-        font-size: 20px;
-    }
-}	
+.graf h1{
+    font: bold 35px 'Open Sans', sans-serif;
+    padding-top:45px;
+    padding-bottom: 45px;
+    justify-content: center;
+    align-items: center;
+    color:#57BFFF;
+}
 
 
 
-.whyadopt{
+
+.porqueadopt{
     background-color: rgb(240, 139, 8);
     justify-content: center;
     display: flex;
     align-items: center;
+    height:800px;
 }
-.whyadopt h4{
+.porqueadopt h3{
     font: bold 40px 'Open Sans', sans-serif;
-    margin-bottom: 50px;
+    margin-bottom: 15px;
     color:rgb(253, 252, 250);
 }
-.whyadopt a{
+.porqueadopt a{
     font: bold 40px 'Open Sans', sans-serif;
 }
-.whyadopt .grid li{
+.porqueadopt .grid li{
     padding: 0 30px;
-    flex-basis: 33.3%;
+    flex-basis: 33%;
     text-align: center;
 }
-.whyadopt .grid li p{
+.porqueadopt .grid li p{
    color:#fff;
    font: bold 25px 'Open Sans', sans-serif;
 }
-@media(max-width: 750px){
-	.whyadopt{
-		display: column;
-	}
-	.whyadopt .grid li{
-		flex-basis: 70%;
-	}
-	.whyadopt .grid li p{
-		font-size: 15px;
-	}
-	.whyadopt .grid li i img{
-		margin-top: 20px;
-	}
-    .whyadopt h4 {
-        font-size: 20px;
-		margin-top: 20px;
-    }
+
+
+
+.btn1{
+    margin-top: 50px;
+    border:3px solid #57BFFF;
+    color:black;
+    background-color: #FFF;
+    width:150px;
+    height:40px;
+    font-weight: bold;
+    border-radius: 12px;
+    font: bold 25px 'Open Sans', sans-serif;
+    transition: all 500ms ease;
+    
+    
+
+ }
+ 
+.btn1:hover{
+ background-color:#57BFFF;
+ box-shadow:0 0 10px #57BFFF, 0 0 20px #57BFFF
 }
 
 
-.whoweare {
+
+.quienes-somos {
     /*position: relative;*/
     justify-content: center;
   
     color: #fff;
     text-align: center;
-    background-color: #34d8f5;
-    margin:0;
+    background-color: rgb(240, 139, 8);
+    margin:auto;
     padding:0;
     align-items: center;
+    height:700px;
 }
 
-
-
-.whoweare .background-image{
+.quienes-somos .background-image{
    /* position: absolute;*/
     position: relative;
     top: 0;
     left: 0;
     width:100%;
-    height: 560px;
+    height: 100%;
     background-size:cover;
     background-color: #414a4f;
     margin:0;
 
 }
-.whoweare .background-image:after{
+.quienes-somos .background-image:after{
     content: '';
     top: 0;
     left: 0;
@@ -400,52 +458,44 @@ header h2 img {
     height: 560px;
     background-color: #414a4f;
     opacity: 0.20;
+    background-size:cover;
 }
-.whoweare h4 {
+.quienes-somos h4 {
     font: bold 41px 'Open Sans', sans-serif;
     margin: 15px,15px;
     /*Esto para que se meustre el texto*/
     position: absolute;
 }
-.whoweare p{
+.quienes-somos p{
     margin: 15px,15px;
     font: bold 25px 'Open Sans', sans-serif;
    
   
 }
-@media(max-width: 750px){
-    .whoweare p{
-        font-size: 15px;
-        margin: 40px;
-    }
-    .whoweare h4 {
-        font-size: 20px;
-        margin-top: 20px;
-    }
-    .whoweare .background-image{
-    position: relative;
-    width:100%;
-    height: 360px;
-    }
-}
 
 
-.mission-vision{
+
+
+
+.mision-vision{
+
+    
     color: #000000;
 
     background-color: #57BFFF;
-    margin:0;
+    margin:auto;
     padding:0;
+    background-size: cover;
    
 }
- .mission-vision .capa{
+ .mision-vision .capa{
      display:flex;
      text-align: center;
     align-items: center;
     vertical-align: middle;
  }
 
-.mission-vision .capa h5 {
+.mision-vision .capa h5 {
     font: bold 25px 'Open Sans', sans-serif;
     margin-bottom: 25px;
     color:rgb(253, 252, 250);
@@ -457,7 +507,7 @@ header h2 img {
    vertical-align: middle;
    padding-left: 90px;
 }
-.mission-vision p{
+.mision-vision p{
     color:rgb(253, 252, 250);
     font: bold 25px 'Open Sans', sans-serif;
 
@@ -468,39 +518,24 @@ header h2 img {
    padding-right: 90px;
    
 }
-.mission-vision img{
+
+
+.mision-vision img{
+    
+  
     width:70%;
     height:890px;
+    background-size:cover ;
     background-size:cover;
     margin:0;
     float: left; 
     padding: 0;
-}
-@media(max-width: 750px){
-    .mission-vision p{
-        font-size: 15px;
-        margin: 40px;
-        margin-left: -40px;
-        padding-left: 0px;
-        padding-right: 9px;
-        float: middle;
-    }
-    .mission-vision .capa{
-        flex-direction: column-reverse;
-        text-align: center;
-        align-items: center;
-        vertical-align: middle;
-    }
-    .mission-vision img{
-        width: 450px;
-        height:890px;
-        float: middle;
-        display: none;
-    }
+ 
 }
 
 
-.coverage{
+.cobertura{
+ 
     background-color: hsl(325, 86%, 46%);
     
     /*position: relative;*/
@@ -513,12 +548,12 @@ header h2 img {
     padding:0;
     align-items: center;
 }
-.coverage .background-image{
+.cobertura .background-image{
     
     top: 0;
     left: 0;
     width:100%;
-    height: 560px;
+    height: 800px;
     background-size:cover;
     background-color: #414a4f;
     margin:0;
@@ -526,16 +561,8 @@ header h2 img {
     flex-wrap: wrap;
    
 }
-.coverage .background-image:after{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 560px;  
-   
-}
-.coverage h6 {
+
+.cobertura h6 {
     font: bold 41px 'Open Sans', sans-serif;
 
     /*Esto para que se meustre el texto*/
@@ -544,34 +571,23 @@ header h2 img {
     padding-right: 600px;
 
 }
-.coverage p{
+.cobertura p{
     
     font: 21px 'Open Sans', sans-serif;
     left:35px;
   
 }
-.coverage p2{
+.cobertura p2{
     font:bold 27px 'Open Sans', sans-serif;
     left:45px;
     padding-right: 420px;
 
 }
-.coverage p3{
+.cobertura p3{
     font: 21px 'Open Sans', sans-serif;
     padding-right: 420px;
     left:45px;
     display: flex;
-}
-@media(max-width: 750px){
-    .coverage h6 {
-        font-size: 20px;
-        margin-top: 20px;
-        padding-right: 90px;
-    }
-    .coverage .background-image{
-        width: 445px;
-        height: 360px;
-    }
 }
 
 
@@ -604,46 +620,31 @@ header h2 img {
 .pricing .text-uppercase {
     letter-spacing: 0.2em;
 }
-@media(max-width: 750px){
-    .pricing .col-lg-4 {
-        width: 370px;
-        margin-left: 40px;
-    }
-    .pricing{
-        justify-content: center;
-    }
-    .pricing p{
-        font-size: 20px;
-    }
-}
+
 
 
 .footer{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    color: #fff;
-    background-color: rgb(240, 139, 8);
-    padding: 15px 0;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	color: #fff;
+	background-color: rgb(240, 139, 8);
+	padding: 60px 0;
 }
 footer ul{
-    display: flex;
-    font-size: 32px;
+	display: flex;
+	margin-bottom: 25px;
+	font-size: 32px;
 }
 
 footer ul li{
-    margin: 0 8px;
-    margin-bottom: 0px;
+	margin: 0 8px;	
 }
 
 footer ul li:first-child{
-    margin-left: 0; 
+	margin-left: 0;	
 }
 footer ul li:last-child{
-    margin-right: 0;    
+	margin-right: 0;	
 }
-footer p {
-    margin-bottom: 0px;
-}
-
